# c2testcase

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
.c2testcases/: .gitignore  pyvenv.cfg
.c2testcases/Scripts/: activate  activate.bat  activate.csh  activate.fish  activate.nu
docs/product/: ANALYSIS.md
docs/specs/: api-contracts.md  testcase-table-interface-classification.md
scripts/: evaluate_llvm_mcdc_fixtures.py  evaluate_mcdc_fixtures.py  run_llvm_mcdc_coverage.py
src/: cli.py
src/api/: app.py  routes.py
src/services/: mcdc_generator.py
tests/evaluation/: SIL_SV_ATG_1 (1).xlsx  SIL_SV_ATG_1_sample.xlsx  ft-hfs_failinform-fh4-4.c
tests/fixtures/c/: C_source_tp-lnpr_lnrsh_cal-e10at-2.c  README.md  SIL_SV_ATG_1.xlsx  SIL_SV_ATG_1_base.xlsx  SIL_SV_ATG_1_result.xlsx  architecture_lifecycle_gate.c  easy_boolean_logic.c  easy_multiple_decisions.c  hard_coupled_conditions.c  hard_environment_dependencies.c  hard_too_many_conditions.c  hardware_in_loop_diagnostics.c  hardware_register_safety.c  io-canii03ad5d24cnv-osm-cskn-1 1.c  io-canii03ad5d24cnv-osm-cskn-1.h  mbd_autocode_controller.c  medium_enum_state.c  medium_nested_logic.c  result_template.md  simple_logic.c  system_acceptance_matrix.c  unit_integration_gate.c
tests/integration/: test_cli.py  test_fastapi_app.py  test_mcdc_fixture_corpus.py
tests/unit/: test_llvm_mcdc_coverage_runner.py  test_mcdc_generator.py
