[project]
name = "c2testcase"
version = "0.1.0"
description = "Local best-effort MC/DC testcase generator for C source files"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "PyYAML>=6",
    "pytest>=8",
]

[project.scripts]
c2testcase = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
